[#TELE-1408] - Refactor and separate CanonicalRequest and StringToSign into their own classes
Authors: @callwait @cmateiasmypulse